Repository unit tests